# Copyright 2021 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/packages/prebuilt_test_manifest.gni")

# TODO(87189): Delete this when CQ uses //sdk/cts/release:tests
group("tests") {
  testonly = true
  deps = [ "//sdk/cts/release:tests" ]
}
